# 2023.2-SINDPOL-Gestao

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sonar-project.properties  test_user.py
.github/workflows/: deploy.yml  release.yml  tests.yml
files/: affiliation_template.docx
gestao/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  settings.py
gestao/db/: base.py  config.py  utils.py
gestao/db/dao/: dummy_dao.py
gestao/db/migrations/: env.py
gestao/db/migrations/versions/: 2023-10-21-23-53_071cefd86342.py  2023-10-22-02-46_532e4deb3c37.py  2023-10-28-21-20_05258d089f10.py  2023-10-28-21-23_0084e7dffc7c.py  2023-11-02-16-33_e8a3e8746d3e.py  2023-11-25-07-13_89f33fa986f8.py  2023-11-29-23-43_d304dbbb6ffe.py  2023-11-30-00-45_0f1bbda43a2b.py  2023-11-30-00-52_284b19912274.py  2023-11-30-03-32_dd095623222c.py  2023-12-01-21-33_02379f0ee4ac.py
gestao/db/models/: __init__.py  dependent.py  dummy_model.py  user.py
gestao/services/: __init__.py
gestao/tests/: __init__.py  test_document.py  test_dummy.py  test_gestao.py  test_login.py  test_user.py  utils.py
gestao/web/: __init__.py  application.py  lifetime.py
gestao/web/api/: __init__.py  router.py
gestao/web/api/dependent/: __init__.py  schema.py  views.py
gestao/web/api/document/: __init__.py  utils.py  views.py
gestao/web/api/dummy/: __init__.py  views.py
gestao/web/api/echo/: __init__.py  views.py
gestao/web/api/login/: __init__.py  schemas.py  utils.py  views.py
gestao/web/api/monitoring/: __init__.py
gestao/web/api/user/: __init__.py  enums.py  schema.py  schemas.py  views.py
metrics/: sonar-metrics.py
